mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  type: LoadBalancer
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
    nodePort: 30020
  selector:
    io.kompose.service: mariadb
# status:
#   loadBalancer: {}
