php-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: php
  name: php
spec:
  type: LoadBalancer
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    nodePort: 30040
  selector:
    io.kompose.service: php
# status:
#   loadBalancer: {}
