phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  type: LoadBalancer
  ports:
  - name: "8183"
    port: 8183
    targetPort: 80
    nodePort: 30010
  selector:
    io.kompose.service: phpmyadmin
# status:
#   loadBalancer: {}
